rust/kcl-lib/tests/array_range_mismatch_units/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing array_range_mismatch_units.kcl
---
KCL Semantic error

  × semantic: Range start and end must be of the same type, but found 1:
  │ number(mm) and 3: number(cm)
   ╭─[1:5]
 1 │ a = [1mm..3cm]
   ·     ─────┬────
   ·          ╰── tests/array_range_mismatch_units/input.kcl
 2 │ assertIs(false, error = "shouldn't make it here")
   ╰────
